@@ -798,6 +798,7 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>Load/Store-on-Condition Facility
 <li>Distinct-Operands Facility
 <li>Population-Count Facility
+<li>Fast-BCR-Serialization Facility
 </ul>
 
 <P>The following optional features of z/Architecture have not yet been implemented:</P>
@@ -810,7 +811,6 @@ is <A HREF="http://www.linuxvm.org/">http://www.linuxvm.org/</A>
 <li>CPU-Measurement Counter Facility
 <li>CPU-Measurement Sampling Facility
 <li>Enhanced-Monitor Facility
-<li>Fast-BCR-Serialization Facility
 <li>Floating-Point-Extension Facility
 <li>IPTE-Range Facility
 <li>Message-Security-Assist Extension 3
