@@ -1,3 +1,4 @@
+05 Sep 2010 Fast-BCR-Serialization Facility - Roger Bowler
 31 Aug 2010 Comment out unimplemented hetmap support for "tapemap" alias
             that produces incorrect output under Linux due to libtool
             wrappers - Kevin Leonard
